unpackaged/main/default/objects/breadwinner_ns__BW_Address__c/breadwinner_ns__BW_Address__c.object-meta.xml
<CustomObject>
    <label>NetSuite Address</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>NetSuite Addresses</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>