unpackaged/main/default/objects/breadwinner_ns__BW_Address__c/fields/breadwinner_ns__Addr2__c.field-meta.xml
<CustomField>
    <fullName>breadwinner_ns__Addr2__c</fullName>
    <label>Address 2</label>
    <length>255</length>
    <type>Text</type>
</CustomField>