unpackaged/main/default/objects/breadwinner_ns__BW_Address__c/fields/breadwinner_ns__AddrText__c.field-meta.xml
<CustomField>
    <fullName>breadwinner_ns__AddrText__c</fullName>
    <label>Address</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>