unpackaged/main/default/objects/breadwinner_ns__BW_Address__c/fields/breadwinner_ns__Contact__c.field-meta.xml
<CustomField>
    <fullName>breadwinner_ns__Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contact</label>
    <referenceTo>breadwinner_ns__BW_Contact__c</referenceTo>
    <relationshipLabel>Contact Addresses</relationshipLabel>
    <relationshipName>BWContactAddresses</relationshipName>
    <type>Lookup</type>
</CustomField>