unpackaged/main/default/objects/breadwinner_ns__BW_Address__c/fields/breadwinner_ns__Entity_Type__c.field-meta.xml
<CustomField>
    <fullName>breadwinner_ns__Entity_Type__c</fullName>
    <label>Entity Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>