unpackaged/main/default/objects/breadwinner_ns__BW_Address__c/fields/breadwinner_ns__Label__c.field-meta.xml
<CustomField>
    <fullName>breadwinner_ns__Label__c</fullName>
    <label>Label</label>
    <length>255</length>
    <type>Text</type>
</CustomField>