unpackaged/main/default/objects/breadwinner_ns__BW_Address__c/fields/breadwinner_ns__NS_Country__c.field-meta.xml
<CustomField>
    <fullName>breadwinner_ns__NS_Country__c</fullName>
    <label>NetSuite API Country</label>
    <length>255</length>
    <type>Text</type>
</CustomField>