unpackaged/main/default/objects/breadwinner_ns__BW_Address__c/fields/breadwinner_ns__Override__c.field-meta.xml
<CustomField>
    <fullName>breadwinner_ns__Override__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Override</label>
    <type>Checkbox</type>
</CustomField>